--- a/SCHEDULE/SCHEDULE.irpt.html
+++ b/SCHEDULE/SCHEDULE.irpt.html
@@ -800,36 +800,19 @@
                             // });
                             // });
                             orderTableCreat(MESM_ProductionOrders);
-                            // cc((new Date().getTime() - t0) + ' ms (tableOrders) ');
-                            // cc(WorkCentres);
                             sheduleForm(WorkCentres);
-                            cc('MESM_ProductionOrders');
-                            cc(MESM_ProductionOrders);
 
                             for (var o in MESM_ProductionOrders) {
                                 if (MESM_ProductionOrders[o].Press != '' && MESM_ProductionOrders[o].Status == 'S') {
-                                    cc('========>');
-                                    cc(MESM_ProductionOrders[o]);
-                                    cc('<========');
-                                    var id = (MESM_ProductionOrders[o].Mold + '_' + MESM_ProductionOrders[o].Press).replace(/[\x00-\x1F\x7F-\x9F]/g, "");
-                                    var _OrderNumber = (MESM_ProductionOrders[o].OrderNumber).replace(/[\x00-\x1F\x7F-\x9F]/g, "");
-                                    var _SchedStart = (MESM_ProductionOrders[o].SchedStart).replace(/[\x00-\x1F\x7F-\x9F]/g, "");
-                                    var _SchedFinish = (MESM_ProductionOrders[o].SchedFinish).replace(/[\x00-\x1F\x7F-\x9F]/g, "");
-                                    cc(id);
-                                    cc(_OrderNumber);
-                                    cc(_SchedStart);
-                                    cc(_SchedFinish);
-                                    addScheduleEvent(id, _OrderNumber, _SchedStart, _SchedFinish);
+                                    addScheduleEvent(
+                                        MESM_ProductionOrders[o].WCG + '_' + MESM_ProductionOrders[o].Press,
+                                        MESM_ProductionOrders[o].OrderNumber,
+                                        MESM_ProductionOrders[o].SchedStart,
+                                        MESM_ProductionOrders[o].SchedFinish
+                                    );
                                 }
                             }
-                            // });
-//                cc(mmmArray);
                         });
-
-//                getData();
-
-
-                    // cc((new Date().getTime() - t0) + ' ms (workCenter) ');
 
                 });
 
@@ -1559,8 +1542,7 @@
                     resourceGroupField: 'WorkingCenter',
                     resourceLabelText:
                         'WorkCenter: ',
-                    resources:
-                    eventSources,
+                    resources: eventSources,
                     // eventOverlap: false, // will cause the event to take up entire resource height
                     resourceAreaWidth:
                         '300px',
@@ -2292,7 +2274,7 @@
         }
 
         function addScheduleEvent(id, title, start, end) {
-            
+
             // var tbOrderID = _OrderID;
             var today = new Date().toISOString().substr(0, 10);
             var colors = [
